--- a/public/style.css
+++ b/public/style.css
@@ -266,7 +266,7 @@ html {
 }
 
 .qt-blog-content-wrap p {
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: clamp(1.6rem, 2vw, 1.8rem);
   font-style: normal;
   font-weight: 400;
@@ -275,7 +275,7 @@ html {
 }
 
 .qt-blog-content-wrap ul {
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: clamp(1.6rem, 2vw, 1.8rem);
   font-style: normal;
   font-weight: 400;
@@ -300,7 +300,7 @@ html {
 }
 
 .qt-title {
-  font-family: Lexend Deca;
+  font-family: "Nunito", sans-serif;
   /* font-size: clamp(3rem, 3vw, 5rem); */
   font-style: normal;
   font-weight: 700;
@@ -351,7 +351,7 @@ html {
 }
 
 .qt-title-2 {
-  font-family: Lexend Deca;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -362,7 +362,7 @@ html {
 }
 
 .qt-title-3 {
-  font-family: Lexend Deca;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -373,7 +373,7 @@ html {
 }
 
 .qt-description {
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: clamp(1.6rem, 1vw, 2rem);
   font-style: normal;
   font-weight: 400;
@@ -445,15 +445,22 @@ html {
   margin-left: 25px;
 }
 
-/* light theme styles */
 .qt-hero-section.light-theme {
+  position: relative;
+  background-color: var(--background-light);
+  color: var(--text-light);
+  background-image: url("lms/hero.png");
+}
+
+/* light theme styles */
+/* .qt-hero-section.light-theme {
   position: relative;
   background-color: var(--background-light);
   color: var(--text-light);
   background-image: url("https://kkhxfqnbxgdhsoisuktc.supabase.co/storage/v1/object/public/qualimatrix-asset/assets/light-yellow.png?t=2024-04-12T06%3A54%3A34.410Z"),
     url("https://kkhxfqnbxgdhsoisuktc.supabase.co/storage/v1/object/public/qualimatrix-asset/assets/home-hero.png?t=2024-04-12T07%3A06%3A24.879Z"),
     url("https://kkhxfqnbxgdhsoisuktc.supabase.co/storage/v1/object/public/qualimatrix-asset/assets/light-blue.png?t=2024-04-12T06%3A56%3A37.723Z");
-}
+} */
 
 .qt-home-hero-section.light-theme {
   position: relative;
@@ -574,7 +581,7 @@ html {
 }
 
 body {
-  font-family: "Lexend Deca", "Inter", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 body .container {
@@ -643,7 +650,7 @@ header {
 
 .qt-hero-content-wrap .description {
   color: #555;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
@@ -661,7 +668,7 @@ header {
 
 .qt-career-section .qt-hero-content-wrap .description {
   color: #555;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
@@ -731,6 +738,12 @@ header {
 .qt-service-main-block .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 40px;
+}
+
+.qt-service-main-block .cards-1 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 40px;
 }
 
@@ -2201,7 +2214,7 @@ header {
 
 .qt-client-block .card.dark-theme .card-title {
   text-align: center;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: clamp(18px, 2vw, 24px);
   font-style: normal;
   font-weight: 700;
@@ -2239,7 +2252,7 @@ header {
 
 .qt-client-block .card-description {
   text-align: center;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -2360,7 +2373,7 @@ header {
 .qt-case-study-block .card-description {
   color: #fff;
   text-align: center;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -5623,7 +5636,7 @@ textarea:focus {
 }
 
 .qt-service-faq-block .card-title {
-  font-family: Lexend Deca;
+  font-family: "Nunito", sans-serif;
   font-size: clamp(1.8rem, 2vw, 3rem);
   font-style: normal;
   font-weight: 700;
@@ -5649,7 +5662,7 @@ textarea:focus {
 
 .qt-service-faq-block .card-description {
   color: #fff;
-  font-family: Inter;
+  font-family: "Nunito", sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -6161,7 +6174,8 @@ textarea:focus {
 
 .qt-case-solution-list {
   display: flex;
-  gap: 10px;
+  gap: 20px;
+  margin-bottom: 15px;
 }
 
 .qt-description .development-text.dark-theme {
@@ -7089,8 +7103,6 @@ body .offcanvas-header .btn-close {
 
 /* Chat bot */
 
-
-
 #qualimatrix-chatbot-chat-area::-webkit-scrollbar {
   width: 10px; /* Width of the scrollbar */
 }
@@ -7109,7 +7121,7 @@ body .offcanvas-header .btn-close {
 .chatbot-header {
   height: 16%;
   padding: 4%;
-  background-color: #0159DC;
+  background-color: #0159dc;
   color: white;
   display: flex;
   justify-content: space-around; /* Aligns the content inside the header evenly */
@@ -7125,10 +7137,10 @@ body .offcanvas-header .btn-close {
 /* Default styles for the chatbot paragraph */
 .chatbot-header-peragraph {
   font-size: 12px;
-  margin-bottom: 0; 
+  margin-bottom: 0;
   color: #ffffff;
 }
-.cb-header-close-btn{
+.cb-header-close-btn {
   height: 20px;
   width: 20px;
 }
@@ -7141,17 +7153,17 @@ body .offcanvas-header .btn-close {
 } */
 
 .cb-textarea {
-  display: block;                 
-  width: 100%;                     
-  padding-top: 10px;                 
-  font-size: 13px;                
-  background: transparent;       
-  border: none;                   
-  max-height: 150px;              
-  height: 50px;                   
-  resize: none;                                        
-  border-radius: 0.2rem;          
-  outline: none;   
+  display: block;
+  width: 100%;
+  padding-top: 10px;
+  font-size: 13px;
+  background: transparent;
+  border: none;
+  max-height: 150px;
+  height: 50px;
+  resize: none;
+  border-radius: 0.2rem;
+  outline: none;
   font-size: 18px;
   /* border-top: 2px solid #dad9d9; */
 }
@@ -7159,7 +7171,7 @@ body .offcanvas-header .btn-close {
   flex-shrink: 0; /* Prevents the button from shrinking */
 }
 .send-btn {
-  background-color: #fff; 
+  background-color: #fff;
   border: none;
   padding: 8px 4px 2px 14px;
   border-radius: 6px;
@@ -7173,14 +7185,14 @@ body .offcanvas-header .btn-close {
   display: flex; /* Using flexbox to align items in a row */
   align-items: center; /* Vertically center the items */
   justify-content: space-between; /* Distribute space between items */
-  position: relative; 
+  position: relative;
   width: 100%;
   padding: 0 10px;
   gap: 10px; /* Small gap between the elements */
   margin: 5px 0px;
   border-top: 2px solid #dad9d9;
 }
-.option-close-btn{
+.option-close-btn {
   background-color: transparent;
   border: none;
   font-size: 24px;
@@ -7192,8 +7204,8 @@ body .offcanvas-header .btn-close {
 }
 /* Styling for textarea placeholder */
 .cb-textarea::placeholder {
-  color: #aaa;  /* Placeholder text color */
-  opacity: 1;  /* Ensure opacity is 1 */
+  color: #aaa; /* Placeholder text color */
+  opacity: 1; /* Ensure opacity is 1 */
 }
 .cb-footer .no-border-focus:focus {
   outline: none;
@@ -7296,11 +7308,10 @@ div#wave .dot:nth-child(3) {
   position: fixed;
   z-index: 99999;
   animation: pop 10s ease-in-out 5;
-  border-top-left-radius: 20px; 
-  border-top-right-radius: 20px; 
-  border-bottom-left-radius: 20px; 
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
-
 
 .chatbot-tooltip p {
   height: 100%;
@@ -7357,7 +7368,6 @@ div#wave .dot:nth-child(3) {
     z-index: 0;
   }
 }
-
 
 @keyframes goPopup {
   0% {
@@ -7438,7 +7448,7 @@ div#wave .dot:nth-child(3) {
   z-index: 999999;
   font-size: 16px;
 
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 /* Overlay */
 .confirmation-overlay {
@@ -7520,4 +7530,163 @@ div#wave .dot:nth-child(3) {
 
 .cb-confirm-btn.secondary:hover {
   background-color: #e0e0e0; /* Slightly darker gray */
+}
+
+.qt-cissp-hero-btn {
+  border-radius: 10px;
+  padding: 18px 43px;
+  background: #0159dc;
+  color: #fff;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border: none;
+}
+
+.qt-course-description {
+  width: 100%;
+  margin: auto;
+}
+
+.qt-course-description .card1 {
+  border-radius: 8px;
+  border: 1px solid #0159dc;
+  background: #fff;
+  padding: 10px;
+  margin-bottom: 40px;
+}
+
+.qt-course-description .card-title {
+  font-family: Nunito, sans-serif;
+  font-size: 30px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #252b33;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  width: 100%;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+.qt-course-description .card-title span {
+  font-size: 24px;
+}
+
+.qt-course-description .card-description {
+  color: #555;
+  font-family: Nunito;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: left;
+  padding: 15px;
+}
+
+.qt-course-description .card1.active .card-description {
+  display: block;
+}
+
+.training-card-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.training-card {
+  border-radius: 20px;
+  border: 1px solid #0159dc;
+  background: #fff;
+}
+
+.training-card-header {
+  border-radius: 19px 19px 0px 0px;
+  background: #e1effa;
+  padding: 20px;
+}
+
+.training-card-title {
+  background: linear-gradient(180deg, #feae33 0%, #0159dc 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.training-card-list {
+  color: #252b33;
+  font-family: Nunito;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+  padding: 20px;
+  text-align: left;
+}
+
+.training-card-list .list-item {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.qt-know-more {
+  color: #fff;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border-radius: 10px;
+  background: #0159dc;
+  padding: 18px;
+  display: flex;
+  margin: 20px;
+}
+
+.qt-key-feature {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Default: 1 card per row */
+  gap: 16px;
+  list-style: none;
+  padding: 0;
+}
+
+.header-logo {
+  justify-content: center;
+}
+
+.qt-girl-img {
+  position: absolute;
+  right: 10%;
+  bottom: 0;
+}
+
+.rating-container {
+  border-radius: 10px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #fff;
+  padding: 10px 20px;
+}
+
+.qt-line {
+  width: 1px !important;
+
+  background-color: #fff;
+  padding: 0 !important;
 }
